--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 8.1fr 1fr; /* 1/5 and 4/5 fractions */
+  grid-template-columns: 1fr 8.1fr 1fr;
 }
 
 .sidebar {
   padding: 20px;
   background-color: #f0f0f0;
-  /* You can add additional styles for the sidebar here */
+  
   width: 150px;
 }
 .sidebar button {
@@ -30,12 +30,10 @@
 .filters select {
   margin: 10px;
   width: 150px;
-  /* center button */
     margin-left: auto;
     margin-right: auto;
 
 }
-/* for first h1 tag */
 h1:first-of-type {
   text-align: center;
   background-color: white;
